--- a/angular/src/account/payment/payment-completed.component.html
+++ b/angular/src/account/payment/payment-completed.component.html
@@ -15,10 +15,10 @@
                 {{"ActivationMessage" | localize}}
             </p>
         </div>
-        <div class="my-5">&emsp;
+        <div *ngIf="paymentResult" class="my-5">&emsp;
             <i class="fas fa-check fa-4x text-success"></i>
         </div>
-        <a class="btn btn-info" href="">
+        <a *ngIf="paymentResult" class="btn btn-info" href="">
             {{"GoToHomePage" | localize}}</a>
     </div>
 </div>
