phone number fix

--- a/angular/src/account/register/register.component.html
+++ b/angular/src/account/register/register.component.html
@@ -389,7 +389,7 @@
                                         <div class="kt-wizard-v1__review-content">
                                             {{businessInfoForm.value.businessName}}<br/>
                                             Address: {{businessInfoForm.value.addressLineOne}} {{businessInfoForm.value.addressLineTwo}}<br/>
-                                            Phone: {{businessInfoForm.value.phoneNumber}}<br/>
+                                            Phone: {{businessInfoForm.value.phone}}<br/>
                                             Website: {{businessInfoForm.value.website}}
                                         </div>
                                         
