checkbox_for_filter_not_reconcilied_accounts_in_reconciliation

--- a/angular/src/app/main/reconcilliation/reconcilliation.component.css
+++ b/angular/src/app/main/reconcilliation/reconcilliation.component.css
@@ -1050,3 +1050,10 @@ tr.table-row-collapsible li {
     padding-top: 0px !important;
     margin-top: 0px !important;
 }
+.abc {
+    width: 350px;
+    margin-left: auto;
+    margin-top: 10px;
+    display: flex;
+    align-items: center;
+}
