--- a/angular/src/app/main/reconcilliation/reconcilliation.component.html
+++ b/angular/src/app/main/reconcilliation/reconcilliation.component.html
@@ -183,8 +183,13 @@
                                             </div>
                                         </form>
                                     </div>
+                                </div>              
+                            </div>
+                            <div class="w-100">
+                                <div class="abc">
+                                    <input name="includeNotReconciled" type="checkbox" (change)="includeNotReconciledCheckBoxHandler($event)" class="mr-1"/>
+                                     <span>Include Not Reconciled Accounts</span>
                                 </div>
-                                
                             </div>
                         </div>
                     </div>
