--- a/angular/src/app/main/reconcilliation/reconcilliation.component.html
+++ b/angular/src/app/main/reconcilliation/reconcilliation.component.html
@@ -186,7 +186,7 @@
                                 </div>              
                             </div>
                             <div class="w-100">
-                                <div class="abc">
+                                <div class="row abc">
                                     <div class="form-group category-selector">
                                         <select class="form-control border-grey" name="reconciliationTypeFilter"
                                         [(ngModel)]="reconciliationTypeFilter" (change)="reconciliationTypeFilterHandler($event)"
@@ -197,9 +197,11 @@
                                             </option>
                                         </select>
                                     </div>
-                                    <!-- <input name="includeNotReconciled" type="checkbox" (change)="includeNotReconciledCheckBoxHandler($event)" class="mr-1"/>
-                                     <span>Include Not Reconciled Accounts</span> -->
-                                </div>
+                                    <div class="abc">
+                                        <input name="includeNotReconciled" type="checkbox" (change)="includeNotReconciledCheckBoxHandler($event)" class="mr-1"/>
+                                        <span>Include Not Reconciled Accounts</span>
+                                    </div>
+                                </div>                 
                             </div>
                         </div>
                     </div>
