--- a/angular/src/account/register/register.component.html
+++ b/angular/src/account/register/register.component.html
@@ -115,7 +115,7 @@
                                         <div class="col-xl-6">
                                             <div class="form-group">
                                                 <label>Email *</label>
-                                                <input formControlName="emailAddress" type="email" class="form-control" name="emailOfUser" placeholder="Enter Email" value="" autocomplete="off" required maxlength="256" email>
+                                                <input formControlName="emailAddress" type="email" class="form-control" [readonly]="specficCustomerLinkExist" name="emailOfUser" placeholder="Enter Email" value="" autocomplete="off" required maxlength="256" email>
                                                 <div *ngIf="emailAddress.invalid && (emailAddress.dirty || emailAddress.touched)">
                                                     <div class="text-danger" *ngIf="emailAddress.errors.required">
                                                         Email is required.
