--- a/angular/src/account/payment/buy.component.html
+++ b/angular/src/account/payment/buy.component.html
@@ -69,6 +69,7 @@
 
         <div class="kt-separator kt-separator--border-dashed"></div>
 
+        <div *ngIf="!isMonthlyOrYearlyPaymentSelected">
         <div *ngIf="supportsRecurringPayments" class="form-group">
             <label class="kt-checkbox mb-0">
                 <input class="form-control" type="checkbox" name="RecurringPaymentEnabled"
@@ -77,7 +78,8 @@
                 <span></span>
             </label>
         </div>
-
+        </div>
+        
         <div class="kt-form__actions mt-4 text-center">
             <div *ngFor="let paymentGateway of paymentGateways" class="mb-2">
                 <button *ngIf="paymentGateway.supportsRecurringPayments || !recurringPaymentEnabled"
