--- a/angular/src/app/admin/users/create-or-edit-user-modal.component.html
+++ b/angular/src/app/admin/users/create-or-edit-user-modal.component.html
@@ -61,6 +61,8 @@
                                     </ng-option>
                                     
                                  </ng-select>
+                                 <span class="form-control-feedback"
+                                        >{{AccountAssignee}}</span>
                             </div>
 
                             <div class="kt-checkbox-list">
