UI fixes implemented

--- a/angular/src/app/admin/importlog/importlog.component.html
+++ b/angular/src/app/admin/importlog/importlog.component.html
@@ -38,15 +38,17 @@
                                             <p-sortIcon field="record.creationTime"></p-sortIcon>
                                         </th>
                                         <th style="width: 130px"  pSortableColumn="type"> 
-                                            {{l('Type')}} 
+                                            {{l('Original File')}} 
                                             <p-sortIcon field="record.type"></p-sortIcon>
                                         </th>
 
-                                        <th style="width: 200px"> {{l('User')}} </th>
+                                        <th style="width: 90px"> {{l('User')}} </th>
+
+                                        <th style="width: 100px"> {{l('Secondary User')}} </th>
 
                                         <th style="width: 80px">{{l('Record')}}</th>
 
-                                        <th style="width: 80px"> {{l('ErrorForImport')}} </th>
+                                        <th style="width: 80px"> {{l('Error Log')}} </th>
 
                                         <th style="width: 70px"> {{l('Action')}} </th>
                                         <th style="width: 80px"> {{l('Status')}} </th>
