Upload UI FOR checklist tab.

--- a/angular/src/app/main/checklist/checklist.component.css
+++ b/angular/src/app/main/checklist/checklist.component.css
@@ -1003,4 +1003,124 @@ table.table.record-table td, table.table.record-table th {
       
       .slider.round:before {
         border-radius: 50%;}
+
+        .btn-images{
+            color: #3F94FD;
+            border:1px solid #3F94FD;
+            margin-right: 5px;
+            width: 140px;
+            height: 36px;
+        }
+        .btn-images img{
+            max-width: 15px;
+            margin-right: 5px;
+        }
+
+        .btn{
+            font-size: 14px; 
+        }
+
+        .uppy-modal ::ng-deep .uppy-Dashboard-inner {
+            min-height:100px !important;
+            height: 200px !important;
+            min-width: 100% !important;
+            width: 100% !important;
+            margin-left: 14px;
+        } 
+        .uppy-modal .modal-dialog {
+            max-width: 1000px;
+        }
+        .uppy-modal .modal-dialog ::ng-deep .uppy-Dashboard-inner {
+            width: 100% !important;
+        }
+        .uppy-modal .modal-dialog ::ng-deep .uppy-modal-box1 ::ng-deep .drag-drop-area {
+            display: flex;
+            flex-wrap: wrap;
+            position: relative;
+        }
+        ::ng-deep table.days.weeks th:first-child, ::ng-deep table.days.weeks td:first-child {
+            display: none;
+        }
+        .uppy-modal .modal-dialog ::ng-deep .drag-drop-area .uppy-Root {
+            width: 100% !important;
+            margin-left: 0% 5% !important;
+        }
+        .uppy-modal .modal-dialog ::ng-deep .drag-drop-area ::ng-deep .uppy-Root:nth-child(1),
+        .download-modal-row .col-md-6:nth-child(1){
+            padding-right: 30px !important;
+        }
+        .uppy-modal .modal-dialog ::ng-deep .drag-drop-area ::ng-deep .uppy-Root:nth-child(2),
+        .download-modal-row .col-md-6:nth-child(2){
+            padding-left: 30px !important;
+        }
+.uppy-modal .modal-dialog .uppy-modal-box1 ::ng-deep .drag-drop-area::after,
+.download-modal-row::after {
+    width: 40px !important;
+    height: 40px !important;
+    position: absolute !important;
+    background-color: #F1F2FC !important;
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+    border: 5px solid #fff !important;
+    border-radius: 50% !important;
+    top: 50% !important;
+    left: 50% !important;
+    transform: translate(-50%, -50%) !important;
+    font-weight: 600 !important;
+    color: #5866dd !important;
+}
+
+.uppy-modal .modal-dialog .uppy-modal-box1 > p {
+    width: 100%;
+    display: inline-block;
+    text-align: center;
+    color: #0F2757;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.uppy-modal .modal-footer,
+.download-modal .modal-footer  {
+    justify-content: center;
+    border: 0;
+}
+.uppy-modal .modal-header,
+.download-modal .modal-header {
+    border: 0;
+    padding: 5px !important;
+}
+.upload-body{
+    padding-top: 0px !important;
+    margin-top: 0px !important;
+}
+.uppy-modal .modal-dialog ::ng-deep .uppy-modal-box1 ::ng-deep .drag-drop-area {
+    display: flex;
+    flex-wrap: wrap;
+    position: relative;
+}
+.download-modal .modal-body {
+    padding: 50px 0 20px;
+}
+.row.modal-bottom-record {
+    margin-top:30px;
+    color: #606060;
+}
+.row.modal-bottom-record .row {
+    margin: 0;
+}
+.row.modal-bottom-record .col-md-6:nth-child(1) {
+    padding-right: 30px;
+}
+.row.modal-bottom-record .col-md-6:nth-child(2){
+    padding-left: 30px;
+}
+.row.modal-bottom-record .col-md-6:nth-child(2) .modal-bottom-row-col{
+    width: 20%;
+}
+.modal-bottom-row-col {
+    width: 33.33%;
+    height: 40px;
+    padding-top:9px ;
+}
        
