--- a/angular/src/app/main/checklist/checklist.component.html
+++ b/angular/src/app/main/checklist/checklist.component.html
@@ -67,12 +67,12 @@
                                         <div >
                                             <div class="row modal-bottom-record">
                                                 <div class="col-md-12">
-                                                    <!-- <p>{{"Trial Balance Format" | localize}} <a href="../../../../assets/TrailBalance.xlsx" download="TrailBalance.xlsx"style="color:blue;margin-left: 20px;cursor: pointer;"><u>{{"Download Sample File" | localize}}</u></a></p> -->
+                                                    <!-- <p>{{"Closing Checlist Format" | localize}} <a href="../../../../assets/TrailBalance.xlsx" download="TrailBalance.xlsx"style="color:blue;margin-left: 20px;cursor: pointer;"><u>{{"Download Sample File" | localize}}</u></a></p> -->
                                                     <div class="row py-0">
                                                         <div class="col-xl-5 form-group"><label>{{"Checklist Format" | localize}} </label><a href="../../../assets/CheckList.xlsx" download="CheckList.xlsx"style="color:blue;margin-left: 20px;cursor: pointer;"><u>{{"Download Sample File" | localize}}</u></a>
                                                         </div>    
                                                         <div class="form-group col-xl-3 pt-2">
-                                                            <label>{{"Select Month for Trial Balance" | localize}} </label>
+                                                            <label>{{"Select Month for Closing Checlist" | localize}} </label>
                                                         </div>
                                                         <div class="form-group col-xl-3" style="height: 40px !important;">
                                                             <div class="month-calender">
